Support remote zilla configuration with change detection (#1071)
* Remove BindingConfig.readLocation
* Remove GuardedConfig.readPath
* Rename ConfigAdapterContext.readLocation to ConfigAdapterContext.readResource
* Deprecate ConfigAdapterContext for removal
* Add EngineConfiguration.configURI() to resolve absolute file path
* Remove EngineConfiguration.configURL() but use to default EngineConfiguration.configURI()
* Simplify EngineManager
* Gather resources on NamespaceConfig from member configs
* Consolidate config and resource watcher as EngineConfigWatcher
* Resolve watched paths based on path filesystem provider scheme
* Configure HttpFileSystem poll internval duration via Map<String,?> env
* Simplify ReconfigureHttpIT scripts and include /zilla.yaml in request path
* HttpFileSystem per origin (root path) not per individual path
* Track HttpPath change count vs read count to implement simple caching
* No watch event needed for identical response body
* Handle status 204 with null body and infer delay for optional prefer wait

---------

Co-authored-by: John Fallows <john.r.fallows@gmail.com>